[package]
name = "rbtc"
version = "0.2.0"
authors = ["q"]
edition = "2018"

[dependencies]
pretty_assertions = "0.5"
regex = "1.1"
hex = "0.3"
byteorder = "1.3.1"
chrono = "0.4"
sha2 = "0.8"
bitflags = "1.0.4"
log = "0.4.6"
microstate = "1.0.0"
threadpool = "1.7.1"

futures = "0.1.25"
tokio = "0.1.15"
bytes = "0.4.11"
mio = "0.6.16"