[package]
name = "rbtc_cli"
version = "0.1.0"
authors = ["q"]
edition = "2018"

[dependencies]
dns-lookup = "1.0.0"
chrono = "0.4.6"
rbtc = { path = "../rbtc" }
rand = "0.6"
sm = "0.7.0"
log = "0.4.6"
pretty_env_logger = "0.3.0"
rayon = "1.0.3"
threadpool = "1.7.1"
futures = "0.1.25"
tokio = "0.1.14"
bytes = "0.4.11"
mio = "0.6.16"
copperline = "0.3.0"
encoding = "0.2.33"