[package]
name = "rbtc_nodewalker"
version = "0.3.0"
authors = ["q"]
edition = "2018"

[dependencies]
dns-lookup = "1.0.0"
chrono = "0.4.6"
rbtc = { path = "../rbtc" }
rand = "0.6"
sm = "0.7.0"
log = "0.4.6"
pretty_env_logger = "0.3.0"
rayon = "1.0.3"


[dependencies.rusqlite]
version = "0.16.0"
features = ["bundled"]